# settings

./: CMakeLists.txt
debian/: control
src/: appearance.cpp  application.cpp  background.cpp  background.h  cscreenmanager.cpp  fontsmodel.cpp  main.cpp
src/cursor/: cursortheme.cpp  cursorthememodel.cpp
src/fonts/: kxftconfig.cpp
src/qml/: BluetoothPage.qml  Hideable.qml  HorizontalDivider.qml  IconButton.qml  IconCheckBox.qml  ItemPage.qml  LanguagePage.qml  RoundedItem.qml  Scrollable.qml  SideBar.qml  StandardButton.qml  StandardItem.qml  main.qml
src/qml/About/: Main.qml
src/qml/Appearance/: Main.qml
src/qml/Application/: Main.qml
src/qml/Battery/: BatteryItem.qml  HistoryGraph.qml  Main.qml
src/qml/Bluetooth/: Main.qml  PairDialog.qml
src/qml/Cursor/: Main.qml
src/qml/DateTime/: Main.qml  TimeZoneDialog.qml
src/qml/DefaultApp/: AppComboBox.qml  Main.qml
src/qml/Display/: Main.qml  RotationButton.qml
src/qml/Dock/: Main.qml
src/qml/Fonts/: Main.qml
src/qml/Hotspot/: Main.qml
src/qml/Notification/: Main.qml
src/qml/Power/: Main.qml
src/qml/Proxy/: Main.qml.bak2
src/qml/Sound/: Main.qml
src/qml/Touchpad/: Main.qml
src/qml/Update/: Main.qml
src/qml/User/: Main.qml  UserDelegateItem.qml  UserDelegateItem.qml.bak2
src/qml/VPN/: Main.qml
src/qml/WLAN/: ConnectDialog.qml  Main.qml  NewNetworkDialog.qml  WifiItem.qml  WifiView.qml  WirelessDetailsDialog.qml
src/qml/Wallpaper/: DesktopPreview.qml  Main.qml
src/qml/Wired/: Main.qml  WiredItem.qml
translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bn_BD.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hr_HR.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  mg.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  (+11 more)
